# webdev

./: README.md  index.html  script.js  style.css
ColorDesign/: index.html
Day1/: index.html
Examples/: index.html
Fluid sim/: index.html
Game Test/: index.html
HTML Skeleton/: index.html
IdleGame/: index.html
JungleDystopiaParkour/: CMakeLists.txt  README.md
JungleDystopiaParkour/src/: main.cpp
LearnToFlyIdleLike/: CMakeLists.txt  README.md
LearnToFlyIdleLike/src/: main.cpp
ListTables/: index.html
MultiPage/: attractions.html  home.html  styles.css
RPG game/: index.html  script.js  style.css
Resume/: index.html
SPACECLICKER/: index.html  script.js  style.css
TycoonIdle3D/: CMakeLists.txt  README.md
TycoonIdle3D/assets/models/: README.md
TycoonIdle3D/build2/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TycoonIdle3D.sln  TycoonIdle3D.vcxproj  TycoonIdle3D.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
TycoonIdle3D/build3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TycoonIdle3D.sln  TycoonIdle3D.vcxproj  TycoonIdle3D.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
TycoonIdle3D/src/: main.cpp
VisualElement/: index.html  styles.css
profile/: profilecard.html  style.css
(+15 files in other folders)
